--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-streamlit
-openai
-whisper
-pytorch
+python-docx==0.8.11
+streamlit==1.22.0
+whisper==1.0
+ffmpeg-python==0.2.0
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch
 torchvision
 torchaudio
